--- a/stat.html
+++ b/stat.html
@@ -8,8 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
 	<script src="js/jquery.tools.min.js"></script>
 	<script src="js/jquery.li-scroller.1.0.js"></script>
+	<script src="js/jHtmlArea-0.7.5.min.js"></script>
 	<script src="js/common.js"></script>
-	<script src="//vk.com/js/api/openapi.js?60"></script>
+	<!--<script src="//vk.com/js/api/openapi.js?60"></script>-->
 </head>
 <body>
 <!-- Facebook -->
