--- a/stat.html
+++ b/stat.html
@@ -46,8 +46,12 @@
 						<em class="nav__divider-l"></em>
 						<em class="nav__divider-r"></em>
 					</li>
-					<li class="nav__user-log">
-						<a href="#">Usernameverylongveryvery</a><i></i><em></em>
+					<li class="nav__user-no-log">
+						<a class="btn enter" href="#">
+							Авторизация
+							<i class="nav__social_fb"></i>
+							<i class="nav__social_vk"></i>
+						</a>
 					</li>			
 				</ul>
 			</div>
