--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 					<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 					<div class="block__desc">
 						<a href="#"><img src="img/pic1.jpg" alt=""></a>
-						<span>28 февраля</span>
+						<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut consectetur adipisicing labore et dolore magna aliqua consectetur adipisicing.</p>
 						<a class="comm" href="#">345 комментариев<i></i></a>
@@ -193,7 +193,7 @@
 				<div class="block">
 					<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 					<div class="block__desc">
-						<span>28 февраля</span>
+						<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut consectetur adipisicing labore et dolore magna aliqua consectetur adipisicing.</p>
 						<a class="comm" href="#">Обсудить<i></i></a>
