--- a/news.html
+++ b/news.html
@@ -201,7 +201,7 @@
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
-					<span>28 февраля</span>
+					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
@@ -210,7 +210,7 @@
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
-					<span>28 февраля</span>
+					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
@@ -219,7 +219,7 @@
 			<div class="block">
 				<a class="block_title" href="#">Билайн объявил о завершении акции «Месяц интернета в подарок»</a>
 				<div class="block__desc">
-					<span>28 февраля</span>
+					<span><a class="user" href="#">Username<i></i></a> • 28 февраля </span>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.</p>	
 					<a class="comm" href="#">345 комментариев<i></i></a>
