tabs with pictures

--- a/news.html
+++ b/news.html
@@ -231,10 +231,10 @@
 			<div class="tabs tabs_sidebar">
 				<div class="tabs__shadow"></div>
 				<ul class="tabs__link tabs__link_all">
-					<li><a class="active" href="tab1"><i class="tabs__link-1"></i></a></li>
-					<li><a href="tab2"><i class="tabs__link-2"></i></a></li>
-					<li><a href="tab3"><i class="tabs__link-3"></i></a></li>
-					<li><a href="tab4"><i class="tabs__link-4"></i></a></li>
+					<li><a class="active" href="tab1"><img src="img/tabs-1.png" alt=""></a></li>
+					<li><a href="tab2"><img src="img/tabs-2.png" alt=""></a></li>
+					<li><a href="tab3"><img src="img/tabs-3.png" alt=""></a></li>
+					<li><a href="tab4"><img src="img/tabs-4.png" alt=""></a></li>
 				</ul>
 				<ul class="tabs__content tabs__content_all">
 					<li id="tab1">
