--- a/news.html
+++ b/news.html
@@ -5,6 +5,7 @@
 <head>
 	<title>Teleus</title>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<meta name="viewport" content="width=1200">
 	<link rel="stylesheet" type="text/css" href="css/screen.css" />
 	<script src="js/jquery.tools.min.js"></script>
 	<script src="js/jquery.li-scroller.1.0.js"></script>
@@ -12,7 +13,7 @@
 	<!--[if lt IE 9]> 
    	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script> 
  	<![endif]-->
-	<script src="//vk.com/js/api/openapi.js?60"></script>
+	<!--<script src="//vk.com/js/api/openapi.js?60"></script>-->
 </head>
 <body>
 <!-- Facebook -->
@@ -37,7 +38,7 @@
 			</div>
 			<nav class="nav">
 				<ul>
-					<li><a href="#">Новости</a></li>
+					<li><a class="active" href="#">Новости</a></li>
 					<li><a href="#">Статьи</a></li>					
 					<li><a href="#">Приложения</a></li>
 					<li><a href="#">Телефоны</a></li>	
@@ -311,24 +312,45 @@
 	<form action="">
 		<ul class="popup__client">
 			<li>
+				<label for="mts">
+					<input id="mts" type="radio" name="operators">			
+					<img src="img/icons/cl3.png" alt="">
+					<span>МТС</span>
+				</label>
+			</li>
+			<li>
 				<label for="beeline">
 					<input id="beeline" type="radio" name="operators">		
-					<i class="popup__client_1"></i>
+					<img src="img/icons/cl1.png" alt="">
 					<span>Билайн</span>
 				</label>				
 			</li>
 			<li>
 				<label for="megafon">
 					<input id="megafon" type="radio" name="operators">			
-					<i class="popup__client_2"></i>
+					<img src="img/icons/cl2.png" alt="">
 					<span>Мегафон</span>
+				</label>
+			</li>			
+			<li>
+				<label for="skylink">
+					<input id="skylink" type="radio" name="operators">			
+					<img src="img/icons/cl1.png" alt="">
+					<span>Скайлинк</span>
 				</label>
 			</li>
 			<li>
-				<label for="mts">
-					<input id="mts" type="radio" name="operators">			
-					<i class="popup__client_3"></i>
-					<span>МТС</span>
+				<label for="tele2">
+					<input id="tele2" type="radio" name="operators">			
+					<img src="img/icons/cl2.png" alt="">
+					<span>Теле 2</span>
+				</label>
+			</li>
+			<li>
+				<label for="rostelecom">
+					<input id="rostelecom" type="radio" name="operators">			
+					<img src="img/icons/cl2.png" alt="">
+					<span>Ростелеком</span>
 				</label>
 			</li>
 		</ul>
