--- a/forms.html
+++ b/forms.html
@@ -75,13 +75,21 @@
 <!-- BEGIN .content -->
 <div class="container">
 	<div class="cols">
-		<div class="col-1">
+		<div class="col-4">
 			<!-- forms -->
 			<div class="form-field">
 				<br>
-				<input class="form-field__txt" type="text">				
+				<input class="form-field__txt" type="text">		
+				<textarea></textarea>			
 				<input class="form-field__btn" type="submit">
-				<label for="">Тратата</label>				
+				<p class="form-field__check">
+					<input id="check" type="checkbox">
+					<label for="check">Чекбокс</label>
+				</p>
+				<p class="form-field__radio">
+					<input id="radio" type="radio">
+					<label for="radio">Радио</label>
+				</p>			
 			</div>
 		</div>
 	</div>
